2006-05-05  Dan Winship  <danw@novell.com>

	* src/display.c (COMMAND_OPTION): Put numbers into the shortDescs
	of the command and run_command options

	* plugins/wobbly.c (WOBBLY_SNAP_MODIFIERS_DEFAULT): Use Shift
	rather than Control, for consistency with Metacity, and to remove
	the ambiguity about whether Ctrl+Alt+Button1 should be "grab cube"
	or "move with snapping". (bnc 169402)

	* plugins/compiz.schemas: regen

2006-05-05  David Reveman  <davidr@novell.com>

	* plugins/compiz.schemas: Regen.

	* gnome/window-decorator/gnome-window-decorator.c: Forward
	metacity's bell settings to compiz.

	* plugins/water.c:
	* plugins/wobbly.c:
	* plugins/fade.c: Add visual bell.

	* include/compiz.h:
	* src/display.c: Add audible bell option.

2006-05-04  David Reveman  <davidr@novell.com>

	* src/window.c (getModalTransient): Avoid infinite recursion when more
	than one group transient got modal state.

2006-05-03  David Reveman  <davidr@novell.com>

	* plugins/move.c:
	* plugins/resize.c (resizeHandleMotionEvent): Don't constrain the
	cursor.

	* plugins/rotate.c (rotateHandleEvent): Use defaultViewportForWindow
	to figure out which viewport we should move to. (bnc 152677)

	* src/window.c (addWindowSizeChanges): Offset x coordinate with
	default viewport coordinate. (bnc 171465)
	(updateWindowAttributes): Always add windows size changes. (bnc 171465)

	* include/compiz.h:
	* src/window.c (defaultViewportForWindow): Add defaultViewportForWindow
	function that computes the default viewport for a window.

2006-05-02  David Reveman  <davidr@novell.com>

	* plugins/cube.c (cubePaintTransformedScreen): Bump up size a bit more
	to make sure the cube unfolds completely.

	* src/event.c (handleEvent): Not constraints should be applied to
	ConfigureRequests for withdrawn windows. (bnc 171143)

	* src/window.c (syncWindowPosition): We never need to send synthetic
	ConfigureNotify events as we're not reparenting windows.

2006-05-02  Dan Winship  <danw@novell.com>
