@@ -1,10 +1,14 @@
-SUBDIRS = include src plugins images gnome kde
+SUBDIRS = include src plugins images gnome kde po
 
-EXTRA_DIST =	     \
-	COPYING	     \
-	COPYING.GPL  \
-	COPYING.MIT  \
-	compiz.pc.in
+EXTRA_DIST =			   \
+	COPYING			   \
+	COPYING.GPL		   \
+	COPYING.MIT		   \
+	compiz.pc.in		   \
+	config/intltool-extract.in \
+	config/intltool-merge.in   \
+	config/intltool-update.in
+
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = compiz.pc
